# ilqgames

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ilqgamesConfig.cmake.in
cmake/: Dependencies.cmake
cmake/config/: ilqgamesConfig.cmake
documentation/: CMakeLists.txt  Doxyfile
documentation/html/: affine__scalar__constraint_8h_source.html  affine__vector__constraint_8h_source.html  air__3d_8cpp_source.html  air__3d_8h_source.html  air__3d__example_8cpp_source.html  air__3d__example_8h_source.html  annotated.html  augmented__lagrangian__solver_8cpp_source.html  augmented__lagrangian__solver_8h_source.html  check__local__nash__equilibrium_8cpp_source.html  check__local__nash__equilibrium_8h_source.html  classes.html  classilqgames_1_1_affine_scalar_constraint-members.html  classilqgames_1_1_affine_scalar_constraint.html  classilqgames_1_1_affine_vector_constraint-members.html  classilqgames_1_1_affine_vector_constraint.html  classilqgames_1_1_air3_d-members.html  classilqgames_1_1_air3_d.html  classilqgames_1_1_air3_d_example-members.html  classilqgames_1_1_air3_d_example.html  classilqgames_1_1_augmented_lagrangian_solver-members.html  classilqgames_1_1_augmented_lagrangian_solver.html  classilqgames_1_1_concatenated_dynamical_system-members.html  classilqgames_1_1_concatenated_dynamical_system.html  classilqgames_1_1_concatenated_flat_system-members.html  classilqgames_1_1_concatenated_flat_system.html  classilqgames_1_1_constraint-members.html  classilqgames_1_1_constraint.html  classilqgames_1_1_control_sliders-members.html  classilqgames_1_1_control_sliders.html  classilqgames_1_1_cost-members.html  classilqgames_1_1_cost.html  classilqgames_1_1_cost_inspector-members.html  classilqgames_1_1_cost_inspector.html  classilqgames_1_1_curvature_cost-members.html  classilqgames_1_1_curvature_cost.html  classilqgames_1_1_dubins_origin_example-members.html  classilqgames_1_1_dubins_origin_example.html  classilqgames_1_1_extreme_value_cost-members.html  classilqgames_1_1_extreme_value_cost.html  (+339 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js
documentation/latex/: annotated.tex  classilqgames_1_1_affine_scalar_constraint.eps  classilqgames_1_1_affine_scalar_constraint.tex  classilqgames_1_1_affine_vector_constraint.eps  classilqgames_1_1_affine_vector_constraint.tex  classilqgames_1_1_air3_d.eps  classilqgames_1_1_air3_d.tex  classilqgames_1_1_air3_d_example.eps  classilqgames_1_1_air3_d_example.tex  classilqgames_1_1_augmented_lagrangian_solver.eps  classilqgames_1_1_augmented_lagrangian_solver.tex  classilqgames_1_1_concatenated_dynamical_system.eps  classilqgames_1_1_concatenated_dynamical_system.tex  classilqgames_1_1_concatenated_flat_system.eps  classilqgames_1_1_concatenated_flat_system.tex  classilqgames_1_1_constraint.eps  classilqgames_1_1_constraint.tex  classilqgames_1_1_control_sliders.tex  classilqgames_1_1_cost.eps  classilqgames_1_1_cost.tex  classilqgames_1_1_cost_inspector.tex  classilqgames_1_1_curvature_cost.eps  classilqgames_1_1_curvature_cost.tex  classilqgames_1_1_dubins_origin_example.eps  classilqgames_1_1_dubins_origin_example.tex  classilqgames_1_1_extreme_value_cost.eps  classilqgames_1_1_extreme_value_cost.tex  classilqgames_1_1_final_time_constraint.eps  classilqgames_1_1_final_time_constraint.tex  classilqgames_1_1_final_time_cost.eps  classilqgames_1_1_final_time_cost.tex  classilqgames_1_1_flat_roundabout_merging_example.eps  classilqgames_1_1_flat_roundabout_merging_example.tex  classilqgames_1_1_game_solver.eps  classilqgames_1_1_game_solver.tex  classilqgames_1_1_i_l_q_solver.eps  classilqgames_1_1_i_l_q_solver.tex  classilqgames_1_1_l_q_feedback_solver.eps  classilqgames_1_1_l_q_feedback_solver.tex  classilqgames_1_1_l_q_open_loop_solver.eps  (+132 more)
exec/: CMakeLists.txt
exec/skeleton_example/: main.cpp
include/ilqgames/cost/: nominal_path_length_cost.h
include/ilqgames/examples/: air_3d_example.h  one_player_reachability_example.h  two_player_reachability_example.h
include/ilqgames/utils/: types.h
matlab/: make_reachability_figures.m
src/: augmented_lagrangian_solver.cpp  check_local_nash_equilibrium.cpp  ilq_solver.cpp  modified_air_3d_example.cpp  two_player_collision_avoidance_reachability_example.cpp  two_player_reachability_example.cpp
test/: CMakeLists.txt
